# whack

components/: hello_world.wasm
components/hello-world/: .gitignore  Cargo.toml
components/hello-world/src/: lib.rs
components/hello-world/wit/: deps.toml  world.wit
whack/: Cargo.toml
whack/src/: main.rs
whack/wit/: deps.toml  handler.wit
