[package]
name = "whack"
description = "A simple wasi:http server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasmtime = { version = "16.0", features = ["component-model"] }
wasmtime-wasi = { version = "16.0" }
wasmtime-wasi-http = { version = "16.0" }

